# gitlint-config

./: .gitignore  LICENSE  NOTICE  README.md  flake.nix  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  request.yml  trouble.yml
