[project]
name = "gitlint-config"
dynamic = ["version"]
description = "ðŸ™âš™ï¸ ha8ta6's Gitlint configuration."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["gitlint>=0.19.1"]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # missing-trailing-comma
  "T201",   # print
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "D100", # undocumented-public-module
  "F401", # unused-import
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gitlint_config.tests.*"
disallow_untyped_decorators = false
