[project]
name = "gitlint-config"
dynamic = ["version"]
description = "ðŸ™âš™ï¸ ha8ta6's Gitlint configuration."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["gitlint>=0.19.1"]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # missing-trailing-comma
  "D100",   # undocumented-public-module
  "D104",   # undocumented-public-package
  "E501",   # line-too-long
  "F401",   # unused-import
  "T201",   # print
]
pydocstyle.convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
